# DeskDock

proj_cm33_ns/: FreeRTOSConfig.h  Makefile  project_info.json
proj_cm33_ns/source/: cm33_ipc_receive.c  cm33_ipc_receive.h  main.c  wifiTask.c  wifiTask.h
proj_cm33_s/: project_info.json
proj_cm55/: FreeRTOSConfig.h  Makefile  lv_conf.h  project_info.json
proj_cm55/source/: dock.c  dock.h  graphicsTask.c  graphicsTask.h  ipc_receive.c  ipc_receive.h  main.c
proj_cm55/ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h
proj_cm55/ui/images/: ui_img_bin_png.c  ui_img_cogwheel_png.c  ui_img_discord_png.c  ui_img_folder_png.c  ui_img_netflix_png.c  ui_img_refresh_png.c  ui_img_settings_png.c  ui_img_spotify_png.c  ui_img_terminal_png.c  ui_img_wifi_png.c  ui_img_youtube_png.c
proj_cm55/ui/screens/: ui_Screen1.c  ui_Screen1.h
shared/include/: commons.h  ipc_communication.h
ui/: CMakeLists.txt  filelist.txt  project.info  ui.c  ui.h  ui_events.h
ui/components/: ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_label1.c
ui/fonts/: ui_font_Font2l30.c  ui_font_Font2l50.c  ui_font_Font2l60.c
ui/images/: ui_img_cogwheel_png.c  ui_img_custom_png.c  ui_img_discord_png.c  ui_img_folder_png.c  ui_img_netflix_png.c  ui_img_refresh_png.c  ui_img_spotify_png.c  ui_img_terminal_png.c  ui_img_wifidisabled1_png.c  ui_img_youtube_png.c
ui/screens/: ui_Screen1.c  ui_Screen1.h
